--- a/src/app/dingo-grid/dingo-grid.component.html
+++ b/src/app/dingo-grid/dingo-grid.component.html
@@ -1,9 +1,11 @@
 <h2 style="text-align: center;">{{youGotADingo ? "Bloody hell you got a DINGO!!!" : "Here's your picks:"}}</h2>
-<div class="grid">
-  <div class="cell" *ngFor="let choice of userChoices; let i = index">
-    <h2>{{choice.name}}</h2>
-    <mat-checkbox (change)="markSelection(choice.value, i)">
-      {{choice.marked ? "He did this one!":""}}
-    </mat-checkbox>
-  </div>
+  <!--<div class="grid">-->
+      <!--<div class="cell" *ngFor="let choice of userChoices; let i = index">-->
+<div class="row grid">
+    <div class="col-4 cell" *ngFor="let choice of userChoices; let i = index">
+        <h4>{{choice.name}}</h4>
+        <mat-checkbox (change)="markSelection(choice.value, i)">
+          {{choice.marked ? "He did this one!":""}}
+        </mat-checkbox>
+    </div>
 </div>
