--- a/src/app/dingo-selection/dingo-selection.component.html
+++ b/src/app/dingo-selection/dingo-selection.component.html
@@ -1,19 +1,22 @@
-<div style="text-align: center">
-  <button *ngIf="userChoices.length === 9"
-          mat-raised-button color="primary"
-          style="position: absolute; margin-left: 150px;"
-          [routerLink]="['/dingo-grid', userChoices]">
-      Lets play Dingo!!
-  </button>
-  <button mat-raised-button color="primary"
-          (click)="randomizeChoices()">
-      Randomize me!
-  </button>
+<div class="row">
+  <div class="col-md-6 text-right">
+      <button *ngIf="userChoices.length === 9"
+              mat-raised-button color="primary"
+              [routerLink]="['/dingo-grid', userChoices]">
+          Lets play Dingo!!
+      </button>
+  </div>
+  <div class="col-md-6">
+      <button mat-raised-button
+              (click)="randomizeChoices()">
+          Randomize me!
+      </button>
+  </div>
 </div>
-
-<div class="example-container">
+<br>
+<div class="row>">
+<div class="example-container col-xs-6">
   <h2>Options</h2>
-
       <div
         cdkDropList
         #todoList="cdkDropList"
@@ -27,7 +30,7 @@
       </div>
 </div>
 
-<div class="example-container">
+<div class="example-container col-xs-6">
   <h2>My Dingo Card</h2>
       <div
         cdkDropList
@@ -40,4 +43,5 @@
                 {{item}}
             </div>
       </div>
+</div>
 </div>
